[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-ev-flex"
version = "0.1.0"
description = "Local OpenADR 3.1 EVSE testbed: utility tariff config + HA telemetry to OpenEVSE amps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "paho-mqtt>=2.1",
  "pyyaml>=6.0",
  "tzdata>=2024.1",
  "openadr3-client>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tariff-engine = "services.tariff_engine.main:main"
ven-adapter = "services.ven_adapter.main:main"
mqtt-fixtures = "services.mqtt_fixtures.publish:main"
lab-e2e = "scripts.lab_e2e:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["home_ev_flex*", "services*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
